Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDVB.BAS


Public Declare Sub BTICard_Add64 Lib "BTICARD.DLL" Alias "_BTICard_Add64@24" (ByRef resulth As Long, ByRef resultl As Long, ByVal valah As Long, ByVal valal As Long, ByVal valbh As Long, ByVal valbl As Long)
Public Declare Function BTICard_AddrDSP Lib "BTICARD.DLL" Alias "_BTICard_AddrDSP@8" (ByVal addr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_AddrHost Lib "BTICARD.DLL" Alias "_BTICard_AddrHost@8" (ByVal addr As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_AsciiToMant Lib "BTICARD.DLL" Alias "_BTICard_AsciiToMant@12" (ByRef str As String, ByRef mant As Long, ByRef exp As Long) As Long
Public Declare Function BTICard_BCDToBin Lib "BTICARD.DLL" Alias "_BTICard_BCDToBin@12" (ByVal bcdval As Long, ByVal msb As Long, ByVal lsb As Long) As Long
Public Declare Function BTICard_BinToBCD Lib "BTICARD.DLL" Alias "_BTICard_BinToBCD@16" (ByVal oldbcdval As Long, ByVal binval As Long, ByVal msb As Long, ByVal lsb As Long) As Long
Public Declare Function BTICard_BITConfig Lib "BTICARD.DLL" Alias "_BTICard_BITConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_BITInitiate Lib "BTICARD.DLL" Alias "_BTICard_BITInitiate@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_BITStatusClear Lib "BTICARD.DLL" Alias "_BTICard_BITStatusClear@8" (ByVal statval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_BITStatusRd Lib "BTICARD.DLL" Alias "_BTICard_BITStatusRd@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardClose Lib "BTICARD.DLL" Alias "_BTICard_CardClose@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardCloseAll Lib "BTICARD.DLL" Alias "_BTICard_CardCloseAll@0" () As Long
Public Declare Function BTICard_CardGetInfo Lib "BTICARD.DLL" Alias "_BTICard_CardGetInfo@12" (ByVal infotype As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CardGetInfoEx Lib "BTICARD.DLL" Alias "_BTICard_CardGetInfoEx@20" (ByRef bufmodel As Integer, ByVal bufmodelcount As Integer, ByRef buffeature As Integer, ByVal buffeaturecount As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CardIsRunning Lib "BTICARD.DLL" Alias "_BTICard_CardIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardNop Lib "BTICARD.DLL" Alias "_BTICard_CardNop@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardOpen Lib "BTICARD.DLL" Alias "_BTICard_CardOpen@8" (ByRef lphandle As Long, ByVal cardnum As Long) As Long
Public Declare Function BTICard_CardOpenStr Lib "BTICARD.DLL" Alias "_BTICard_CardOpenStr@8" (ByRef lphandle As Long, ByRef cardstr As String) As Long
Public Declare Function BTICard_CardProductStr Lib "BTICARD.DLL" Alias "_BTICard_CardProductStr@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardReserveRd Lib "BTICARD.DLL" Alias "_BTICard_CardReserveRd@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardReserveWr Lib "BTICARD.DLL" Alias "_BTICard_CardReserveWr@8" (ByRef str As String, ByVal handleval As Long) As Long
Public Declare Sub BTICard_CardReset Lib "BTICARD.DLL" Alias "_BTICard_CardReset@4" (ByVal handleval As Long)
Public Declare Sub BTICard_CardResetEx Lib "BTICARD.DLL" Alias "_BTICard_CardResetEx@4" (ByVal handleval As Long)
Public Declare Function BTICard_CardResume Lib "BTICARD.DLL" Alias "_BTICard_CardResume@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardShadow Lib "BTICARD.DLL" Alias "_BTICard_CardShadow@8" (ByVal shadowval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CardStart Lib "BTICARD.DLL" Alias "_BTICard_CardStart@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardStop Lib "BTICARD.DLL" Alias "_BTICard_CardStop@4" (ByVal handleval As Long) As Long
Public Declare Sub BTICard_CardSyncEnable Lib "BTICARD.DLL" Alias "_BTICard_CardSyncEnable@16" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal handleval As Long)
Public Declare Function BTICard_CardSyncValid Lib "BTICARD.DLL" Alias "_BTICard_CardSyncValid@4" (ByVal handleval As Long) As Integer
Public Declare Function BTICard_CardSyncValidEx Lib "BTICARD.DLL" Alias "_BTICard_CardSyncValidEx@12" (ByRef maskout As Integer, ByVal maskin As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CardTest Lib "BTICARD.DLL" Alias "_BTICard_CardTest@8" (ByVal level As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CardTest0 Lib "BTICARD.DLL" Alias "_BTICard_CardTest0@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardTest1 Lib "BTICARD.DLL" Alias "_BTICard_CardTest1@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardTest2 Lib "BTICARD.DLL" Alias "_BTICard_CardTest2@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CardTest3 Lib "BTICARD.DLL" Alias "_BTICard_CardTest3@4" (ByVal handleval As Long) As Long
Public Declare Sub BTICard_CardTrigger Lib "BTICARD.DLL" Alias "_BTICard_CardTrigger@4" (ByVal handleval As Long)
Public Declare Sub BTICard_CardTriggerEnable Lib "BTICARD.DLL" Alias "_BTICard_CardTriggerEnable@8" (ByVal enableflag As Long, ByVal handleval As Long)
Public Declare Sub BTICard_CardTriggerEnableEx Lib "BTICARD.DLL" Alias "_BTICard_CardTriggerEnableEx@16" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal pinpolarity As Integer, ByVal handleval As Long)
Public Declare Sub BTICard_CardTriggerEx Lib "BTICARD.DLL" Alias "_BTICard_CardTriggerEx@8" (ByVal trigmask As Integer, ByVal handleval As Long)
Public Declare Function BTICard_CardTriggerValid Lib "BTICARD.DLL" Alias "_BTICard_CardTriggerValid@4" (ByVal handleval As Long) As Integer
Public Declare Function BTICard_CardTriggerValidEx Lib "BTICARD.DLL" Alias "_BTICard_CardTriggerValidEx@12" (ByRef maskout As Integer, ByVal maskin As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CardTypeStr Lib "BTICARD.DLL" Alias "_BTICard_CardTypeStr@4" (ByVal handleval As Long) As Long
Public Declare Sub BTICard_ChDARClr Lib "BTICARD.DLL" Alias "_BTICard_ChDARClr@16" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICard_ChDARGet Lib "BTICARD.DLL" Alias "_BTICard_ChDARGet@16" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_ChDARRdL Lib "BTICARD.DLL" Alias "_BTICard_ChDARRdL@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICard_ChDARRdsW Lib "BTICARD.DLL" Alias "_BTICard_ChDARRdsW@20" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICard_ChDARRdW Lib "BTICARD.DLL" Alias "_BTICard_ChDARRdW@12" (ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_ChDARSet Lib "BTICARD.DLL" Alias "_BTICard_ChDARSet@16" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTICard_ChDARWrL Lib "BTICARD.DLL" Alias "_BTICard_ChDARWrL@16" (ByVal value As Long, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTICard_ChDARWrsW Lib "BTICARD.DLL" Alias "_BTICard_ChDARWrsW@20" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Sub BTICard_ChDARWrW Lib "BTICARD.DLL" Alias "_BTICard_ChDARWrW@16" (ByVal value As Integer, ByVal addrval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTICard_CISRd Lib "BTICARD.DLL" Alias "_BTICard_CISRd@16" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal cistype As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CISWr Lib "BTICARD.DLL" Alias "_BTICard_CISWr@16" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal cistype As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommBufRd Lib "BTICARD.DLL" Alias "_BTICard_CommBufRd@8" (ByVal offset As Integer, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_CommBufWr Lib "BTICARD.DLL" Alias "_BTICard_CommBufWr@12" (ByVal value As Integer, ByVal offset As Integer, ByVal handleval As Long)
Public Declare Function BTICard_CommCall Lib "BTICARD.DLL" Alias "_BTICard_CommCall@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommChannelReconfig Lib "BTICARD.DLL" Alias "_BTICard_CommChannelReconfig@8" (ByVal chmask As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommCheck Lib "BTICARD.DLL" Alias "_BTICard_CommCheck@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CommDisable Lib "BTICARD.DLL" Alias "_BTICard_CommDisable@8" (ByVal command As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommDisableEx Lib "BTICARD.DLL" Alias "_BTICard_CommDisableEx@8" (ByVal command As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommEnable Lib "BTICARD.DLL" Alias "_BTICard_CommEnable@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CommExternSRQ Lib "BTICARD.DLL" Alias "_BTICard_CommExternSRQ@8" (ByVal chmask As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommFillW Lib "BTICARD.DLL" Alias "_BTICard_CommFillW@16" (ByVal value As Integer, ByVal addrval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommProtocolFunc Lib "BTICARD.DLL" Alias "_BTICard_CommProtocolFunc@16" (ByVal opcode As Integer, ByVal argcount As Integer, ByRef argbuf As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommRdL Lib "BTICARD.DLL" Alias "_BTICard_CommRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommRdsW Lib "BTICARD.DLL" Alias "_BTICard_CommRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CommRdW Lib "BTICARD.DLL" Alias "_BTICard_CommRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function BTICard_CommRun Lib "BTICARD.DLL" Alias "_BTICard_CommRun@20" (ByRef dataptr As Integer, ByVal datacount As Integer, ByRef codeptr As Integer, ByVal codecount As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTICard_CommWrL Lib "BTICARD.DLL" Alias "_BTICard_CommWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Function BTICard_CommWrsW Lib "BTICARD.DLL" Alias "_BTICard_CommWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTICard_CommWrW Lib "BTICARD.DLL" Alias "_BTICard_CommWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Function BTICard_CoProcCheck Lib "BTICARD.DLL" Alias "_BTICard_CoProcCheck@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_CoProcGetInfo Lib "BTICARD.DLL" Alias "_BTICard_CoProcGetInfo@12" (ByRef valueptr As Long, ByVal infotype As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_CoProcMemRdL Lib "BTICARD.DLL" Alias "_BTICard_CoProcMemRdL@12" (ByRef valueptr As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CoProcMemRdsL Lib "BTICARD.DLL" Alias "_BTICard_CoProcMemRdsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal count As Long, ByVal handleval As Long) As Long
